[gd_scene load_steps=6 format=3 uid="uid://b43idpp5snbdm"]

[ext_resource type="Script" uid="uid://3heepv8qrlke" path="res://Scenes/game_ui.gd" id="1_bw2rt"]
[ext_resource type="LabelSettings" uid="uid://dt4d8t41tnpa1" path="res://Assets/GM_white_32.tres" id="1_gek4i"]
[ext_resource type="Texture2D" uid="uid://bb3bbq7u1mqt2" path="res://Assets/panel_beigeLight.png" id="3_x63ue"]
[ext_resource type="FontFile" uid="uid://hxoo3f6af24p" path="res://assets/LuckiestGuy-Regular.ttf" id="4_gjn1n"]

[sub_resource type="LabelSettings" id="LabelSettings_1t2s1"]
font = ExtResource("4_gjn1n")
font_size = 56
outline_size = 18
outline_color = Color(0.368627, 0.380392, 0.85098, 1)

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bw2rt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Level"
label_settings = ExtResource("1_gek4i")

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "10"
label_settings = ExtResource("1_gek4i")

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Moves"
label_settings = ExtResource("1_gek4i")

[node name="MovesLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "s-"
label_settings = ExtResource("1_gek4i")

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Best"
label_settings = ExtResource("1_gek4i")

[node name="BestLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "10"
label_settings = ExtResource("1_gek4i")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -180.0
offset_right = 280.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_x63ue")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "LEVEL COMPLETE!"
label_settings = SubResource("LabelSettings_1t2s1")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MovesTakenLabel" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "You took XXX moves!"
label_settings = ExtResource("1_gek4i")
horizontal_alignment = 1

[node name="NewBestLabel" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "A New Record!"
label_settings = ExtResource("1_gek4i")
horizontal_alignment = 1
